# algs

./: .gitignore  0.Algorithm.hpp  0.mat_gen.py  1.eratosthenes.hpp  2.convex_hull.cpp  2.convex_hull.hpp  2.datapoints.in  3.PCA.cpp  3.data.in  3.data.out  CMakeLists.txt
1.eratosthenes/: 1.eratosthenes.cpp  1.eratosthenes.hpp  CMakeLists.txt
2.convex_hull/: 2.convex_hull.cpp  2.datapoints.out  2.visualise.py  CMakeLists.txt
3.PCA/: 3.PCA.cpp  3.PCA.hpp  3.visualise.py  CMakeLists.txt
4.floyd_steinberg/: 4.floyd_steinberg.cpp  4.floyd_steinberg.hpp  CMakeLists.txt
5.filters/: 5.filtering.cpp  5.filtering.hpp  5.filters.cpp  5.filters.hpp  CMakeLists.txt
6.BST/: 6.bst.cpp  6.bst.hpp  CMakeLists.txt
utils/: 0.visualize.py
